# dwin-hmi-esp

./: .gitignore  CMakeLists.txt  DWIN.cpp  LICENSE  README.md  idf_component.yml  max6675.c
.github/workflows/: build_and_test.yml  build_example.yml  upload_component.yml
example/: CMakeLists.txt  README.md
example/main/: CMakeLists.txt  dwin_example_test.cpp  idf_component.yml  max6675_example_test.c
include/: DWIN.h  max6675.h
test_apps/: CMakeLists.txt  diagram.json  pytest_max6675.py  sdkconfig.defaults  wokwi.toml
test_apps/main/: CMakeLists.txt  test_max6675.c
